--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -13,20 +13,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Tic Tac Toe"
         android:textColor="#CFCBCB"
-        android:layout_marginTop="50dp"
+        android:textStyle="bold"
+        android:layout_marginTop="70dp"
+        android:id="@+id/result"
         android:background="#2E2D2D"
-        android:textSize="50dp"></TextView>
+        android:textSize="30dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginTop="70dp"
+        android:layout_marginHorizontal="10dp">
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,9 +38,7 @@
             android:gravity="center"
             android:background="@color/white"
             app:backgroundTint="@null"
-            android:id="@+id/btn0">
-
-        </Button>
+            android:id="@+id/btn0"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -51,9 +50,7 @@
             android:gravity="center"
             android:background="@color/white"
             app:backgroundTint="@null"
-            android:id="@+id/btn1">
-
-        </Button>
+            android:id="@+id/btn1"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -64,20 +61,17 @@
             android:textColor="@color/black"
             android:background="@color/white"
             app:backgroundTint="@null"
-            android:id="@+id/btn2">
-
-        </Button>
-
+            android:id="@+id/btn2"/>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginHorizontal="10dp">
 
         <Button
             android:layout_width="wrap_content"
@@ -89,9 +83,7 @@
             android:gravity="center"
             android:background="@color/white"
             app:backgroundTint="@null"
-            android:id="@+id/btn3">
-
-        </Button>
+            android:id="@+id/btn3"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -103,10 +95,7 @@
             android:gravity="center"
             android:background="@color/white"
             app:backgroundTint="@null"
-            android:id="@+id/btn4">
-
-        </Button>
-
+            android:id="@+id/btn4"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -117,21 +106,17 @@
             android:gravity="center"
             android:background="@color/white"
             app:backgroundTint="@null"
-            android:id="@+id/btn5">
-
-        </Button>
-
+            android:id="@+id/btn5"/>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp">
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="10dp">
 
         <Button
             android:layout_width="wrap_content"
@@ -143,9 +128,7 @@
             android:textColor="@color/black"
             android:background="@color/white"
             app:backgroundTint="@null"
-            android:id="@+id/btn6">
-
-        </Button>
+            android:id="@+id/btn6"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -157,9 +140,7 @@
             android:gravity="center"
             android:background="@color/white"
             app:backgroundTint="@null"
-            android:id="@+id/btn7">
-
-        </Button>
+            android:id="@+id/btn7"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -170,22 +151,21 @@
             android:background="@color/white"
             android:textColor="@color/black"
             app:backgroundTint="@null"
-            android:id="@+id/btn8">
+            android:id="@+id/btn8"/>
 
-        </Button>
     </LinearLayout>
 
     <TextView
-        android:id="@+id/text1"
-        android:layout_width="match_parent"
+        android:id="@+id/restart"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="30dp"
         android:background="@color/white"
         app:backgroundTint="@null"
-        android:text="Restart"
-        android:textSize="25dp"
-        android:gravity="center"
-        />
+        android:textStyle="bold"
+        android:text="    Restart    "
+        android:textSize="25dp"/>
+
 </LinearLayout>
